--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,15 @@
     android:background="@color/base_background_color"
     tools:context=".MainActivity">
 
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/bottomNav"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
@@ -243,7 +252,7 @@
         android:layout_marginBottom="65dp"
         app:layout_constraintBottom_toBottomOf="@+id/scroll_view"
         />
-
+    </FrameLayout>
     <!-- bottom navi -->
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -252,14 +261,16 @@
         android:layout_height="64dp"
         android:gravity="bottom"
         app:layout_behavior="com.sincar.customer.common.BottomNavigationViewBehavior"
-        app:layout_constraintBottom_toBottomOf="@+id/scroll_view"
         app:menu="@menu/bottom_navi"
         tools:ignore="MissingConstraints"
         app:layout_insetEdge="bottom"
-        app:labelVisibilityMode="labeled"
+        android:background="@drawable/default_background_type_3"
         app:itemBackground="@color/base_background_color"
         app:itemIconTint="@drawable/bottom_section_color"
-        app:itemTextColor="@color/default_text_color"/>
+        app:itemTextColor="@color/default_text_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
