--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,11 +9,13 @@
     <color name="textColorPrimary">#3E3E3E</color>
 
 
+
     <color name="light_green300">#AED581</color>
     <color name="green700">#388E3C</color>
 
     <!-- Basic Color -->
     <color name="base_background_color">#FFFFFF</color>
+    <color name="base_background_color1">#f4f6ff</color>
 
     <!-- Sub Color -->
     <color name="sub_color_1">#b0bec5</color>
