예약 시간 설정 확면 리스트 작업 : 시간 리스트는 리스트 안에 리스트 추가 가능한지 확인 필요 예약 상세 화면 기본화면 작업

--- a/app/src/main/res/layout/activity_reservation_detail.xml
+++ b/app/src/main/res/layout/activity_reservation_detail.xml
@@ -4,6 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".ReservationDetailActivity">
+
+    <!-- ActionBar 영역 -->
+    <include
+        android:id="@+id/include"
+        layout="@layout/actionbar_back_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
