--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/customColorPrimary1"
     tools:context=".NoticeActivity">
 
     <!-- ActionBar 영역 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:id="@+id/include"
+        android:layout_height="?attr/actionBarSize"
+        android:id="@+id/notice_include"
         tools:ignore="MissingConstraints">
 
         <!-- ActionBar : Back / Title / Info -->
@@ -31,222 +30,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal"
-            android:text="공지사항"
+            android:text="@string/title_notice"
             android:textColor="#3e3e3e"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/notice_btnPrev"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="56dp">
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-             tools:ignore="MissingConstraints" />
-    </LinearLayout>
-<!--
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="28dp"
-        android:orientation="vertical"
+
+
+    <!-- 리스트 내용 -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/noticeHistoryList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="45dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include">
-
-        <LinearLayout
-            android:id="@+id/menu_1"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:text="@string/settings_recommender"
-                android:textSize="15sp"
-                android:textColor="#3e3e3e"
-                android:letterSpacing="0.05" />
-
-            <ImageView
-                android:layout_width="21dp"
-                android:layout_height="21dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
-                android:layout_marginRight="8dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/textColorPrimary" />
-
-        <LinearLayout
-            android:id="@+id/menu_2"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:text="@string/settings_notice"
-                android:textSize="15sp"
-                android:textColor="#3e3e3e"
-                android:letterSpacing="0.05" />
-
-            <ImageView
-                android:layout_width="21dp"
-                android:layout_height="21dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
-                android:layout_marginRight="8dp"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/textColorPrimary" />
-
-        <LinearLayout
-            android:id="@+id/menu_3"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:text="@string/settings_card"
-                android:textSize="15sp"
-                android:textColor="#3e3e3e"
-                android:letterSpacing="0.05" />
-
-            <ImageView
-                android:layout_width="21dp"
-                android:layout_height="21dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
-                android:layout_marginRight="8dp"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/textColorPrimary" />
-
-        <LinearLayout
-            android:id="@+id/menu_4"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:text="@string/settings_coupone"
-                android:textSize="15sp"
-                android:textColor="#3e3e3e"
-                android:letterSpacing="0.05" />
-
-            <ImageView
-                android:layout_width="21dp"
-                android:layout_height="21dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
-                android:layout_marginRight="8dp"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/textColorPrimary" />
-
-        <LinearLayout
-            android:id="@+id/menu_5"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:text="@string/settings_manage"
-                android:textSize="15sp"
-                android:textColor="#3e3e3e"
-                android:letterSpacing="0.05" />
-
-            <ImageView
-                android:layout_width="21dp"
-                android:layout_height="21dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
-                android:layout_marginRight="8dp"/>
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/textColorPrimary" />
-
-        <LinearLayout
-            android:id="@+id/menu_6"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:text="@string/settings_set"
-                android:textSize="15sp"
-                android:textColor="#3e3e3e"
-                android:letterSpacing="0.05" />
-
-            <ImageView
-                android:layout_width="21dp"
-                android:layout_height="21dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_notice"
-                android:layout_marginRight="8dp"/>
-        </LinearLayout>
-
-    </LinearLayout>
--->
-
+        app:layout_constraintTop_toBottomOf="@+id/notice_include" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
