--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
 
     <color name="textColorPrimary">#3E3E3E</color>
 
-
+    <color name="card_background_color">#ffe7e9</color>
 
     <color name="light_green300">#AED581</color>
     <color name="green700">#388E3C</color>
