--- a/app/src/main/res/layout/activity_card_register.xml
+++ b/app/src/main/res/layout/activity_card_register.xml
@@ -239,13 +239,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="20dp"
             android:gravity="center|center_horizontal|center_vertical">
 
             <Button
                 android:id="@+id/card_reg_btn"
                 android:layout_width="312dp"
                 android:layout_height="52dp"
-                android:layout_gravity="center"
+                android:layout_gravity="bottom|center"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="40dp"
