--- a/app/src/main/res/layout/activity_reservation_time.xml
+++ b/app/src/main/res/layout/activity_reservation_time.xml
@@ -17,7 +17,7 @@
 
     <!-- 대리점 시간 리스트 -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/agentTimeList"
+        android:id="@+id/agentList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
