--- a/app/src/main/res/layout/car_list_item.xml
+++ b/app/src/main/res/layout/car_list_item.xml
@@ -41,7 +41,7 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="14dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="24dp"
                 android:gravity="left|center_horizontal|center_vertical">
@@ -49,7 +49,7 @@
                 <TextView
                     android:id="@+id/car_column2"
                     android:layout_width="match_parent"
-                    android:layout_height="16dp"
+                    android:layout_height="17dp"
                     android:layout_marginStart="16dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="차량이름"
@@ -59,7 +59,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
                 android:layout_marginLeft="24dp"
                 android:gravity="left|center_horizontal|center_vertical">
@@ -67,7 +67,7 @@
                 <TextView
                     android:id="@+id/car_column3"
                     android:layout_width="match_parent"
-                    android:layout_height="16dp"
+                    android:layout_height="17dp"
                     android:layout_marginStart="16dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="차량번호"
