--- a/app/src/main/res/layout/select_car_dialog.xml
+++ b/app/src/main/res/layout/select_car_dialog.xml
@@ -15,19 +15,38 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <GridView
-            android:id="@+id/car_gridView1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:columnWidth="94dp"
-            android:horizontalSpacing="8dp"
-            android:numColumns="auto_fit"
-            android:verticalSpacing="8dp">
-        </GridView>
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
+            <TextView
+                android:layout_width="78dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="28dp"
+                android:gravity="center"
+                android:background="@drawable/layout_background"
+                android:text="모델명"
+                android:textColor="#3E3E3E"
+                android:textSize="14sp" />
+
+            <GridView
+                android:id="@+id/car_gridView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center|center_horizontal|center_vertical"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:columnWidth="94dp"
+                android:horizontalSpacing="8dp"
+                android:numColumns="auto_fit"
+                android:verticalSpacing="8dp">
+            </GridView>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
 
