--- a/app/src/main/res/layout/select_company_dialog.xml
+++ b/app/src/main/res/layout/select_company_dialog.xml
@@ -9,26 +9,45 @@
         android:orientation="vertical"
         tools:context=".CardRegisterActivity" ><!--해당 액티비티 선언-->
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:orientation="vertical" >
 
-         <GridView
-             android:id="@+id/gridView1"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_marginTop="10dp"
-             android:layout_marginLeft="10dp"
-             android:layout_marginRight="10dp"
-             android:columnWidth="94dp"
-             android:horizontalSpacing="8dp"
-             android:numColumns="auto_fit"
-             android:verticalSpacing="8dp">
-         </GridView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
-     </LinearLayout>
+            <TextView
+                android:layout_width="78dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="28dp"
+                android:gravity="center"
+                android:background="@drawable/layout_background"
+                android:text="제조사"
+                android:textColor="#3E3E3E"
+                android:textSize="14sp" />
+
+            <GridView
+                android:id="@+id/gridView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_horizontal|center_vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginRight="10dp"
+                android:columnWidth="94dp"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:horizontalSpacing="8dp"
+                android:numColumns="auto_fit"
+                android:verticalSpacing="8dp"></GridView>
+
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
 
 
