--- a/app/src/main/res/layout/activity_reservation_main.xml
+++ b/app/src/main/res/layout/activity_reservation_main.xml
@@ -4,6 +4,247 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".ReservationMainActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="152dp"
+        android:background="@drawable/default_background_type_7_round_bottom"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- ActionBar 영역 -->
+        <include
+            android:id="@+id/include"
+            layout="@layout/actionbar_back_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- 대리점, 예약일, 예약시간 영역 -->
+        <!-- TODO : 사진 이미지 처리 필요 -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/reservation_info_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/include"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/agent_photo"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="4dp"
+                android:contentDescription="@string/agent_photo_desc"
+                app:srcCompat="@mipmap/ic_launcher_round"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/branch_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="10dp"
+                android:textSize="20sp"
+                android:textColor="#3e3e3e"
+                android:textStyle="bold"
+                android:text="@string/reservation_agent_dummy"
+                tools:text="관악구 1호점"
+                app:layout_constraintStart_toEndOf="@+id/agent_photo"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/reserve_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="12dp"
+                android:textSize="15sp"
+                android:textColor="#3e3e3e"
+                android:text="@string/reservation_date_dummy"
+                tools:text="9/15(화)"
+                app:layout_constraintStart_toEndOf="@+id/agent_photo"
+                app:layout_constraintTop_toBottomOf="@+id/branch_name"
+                />
+
+            <TextView
+                android:id="@+id/reserve_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:textSize="15sp"
+                android:textColor="#3e3e3e"
+                android:text="@string/reservation_time_dummy"
+                tools:text="9:00"
+                app:layout_constraintStart_toEndOf="@id/reserve_date"
+                app:layout_constraintTop_toBottomOf="@id/branch_name" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <!-- 차량 정보 영역 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/car_info_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/title_layout">
+
+        <TextView
+            android:id="@+id/car_info_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:textSize="16sp"
+            android:textColor="#3e3e3e"
+            android:textStyle="bold"
+            android:text="@string/car_info_title"
+            tools:text="차량 정보"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/car_register_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:layout_marginBottom="24dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/car_info_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="#3e3e3e"
+                android:letterSpacing="0.05"
+                android:lineSpacingExtra="2sp"
+                tools:text="등록된 차량 없음"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <!-- TODO : 등록하기 버튼 만들기 -->
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/car_modify_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/car_info_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <TextView
+                android:id="@+id/car_name_str"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="#3e3e3e"
+                android:letterSpacing="0.05"
+                android:lineSpacingExtra="2sp"
+                android:text="@string/car_name_str"
+                tools:text="현대 싼타페 (대형)"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/car_number_str"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="15sp"
+                android:textColor="#3e3e3e"
+                android:letterSpacing="0.05"
+                android:lineSpacingExtra="2sp"
+                android:text="@string/car_number_str"
+                tools:text="35나 8743"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/car_name_str"
+                />
+
+            <!-- TODO : 변경하기 버튼 만들기 -->
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#1a323232"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- 세차 장소 영역 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/wash_info_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/car_info_layout">
+
+        <TextView
+            android:id="@+id/wash_info_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:textSize="16sp"
+            android:textColor="#3e3e3e"
+            android:textStyle="bold"
+            android:text="@string/wash_info_title"
+            tools:text="세차 장소"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#1a323232"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- 부가서비스(선택) 영역 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/option_service_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/wash_info_layout"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:id="@+id/option_service_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:textSize="16sp"
+            android:textColor="#3e3e3e"
+            android:textStyle="bold"
+            android:text="@string/option_service_title"
+            tools:text="부가 서비스 (옵션)"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
