--- a/app/src/main/res/layout/activity_reservation_main.xml
+++ b/app/src/main/res/layout/activity_reservation_main.xml
@@ -241,7 +241,52 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <View
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/wash_info_title"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <!-- TODO : 라디오버튼 아이콘과 간격 8dp 설정 필요 -->
+                    <RadioButton
+                        android:id="@+id/radioButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:textSize="15sp"
+                        android:textColor="#3e3e3e"
+                        android:letterSpacing="0.05"
+                        android:lineSpacingExtra="2sp"
+                        android:button="@drawable/radio_button_selector"
+                        android:text="@string/wash_indoor" />
+
+                    <RadioButton
+                        android:id="@+id/radioButton2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="36dp"
+                        android:textSize="15sp"
+                        android:textColor="#3e3e3e"
+                        android:letterSpacing="0.05"
+                        android:lineSpacingExtra="2sp"
+                        android:button="@drawable/radio_button_selector"
+                        android:text="@string/wash_outdoor" />
+                </RadioGroup>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#1a323232"
