--- a/app/src/main/res/layout/activity_reservation_main.xml
+++ b/app/src/main/res/layout/activity_reservation_main.xml
@@ -241,52 +241,53 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/wash_info_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <RadioGroup
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:layout_marginBottom="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/wash_info_title"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintTop_toTopOf="parent">
 
-                <RadioGroup
-                    android:layout_width="wrap_content"
+                <!-- TODO : 라디오버튼 아이콘과 간격 8dp 설정 필요 -->
+                <RadioButton
+                    android:id="@+id/radioButton"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:checked="true"
+                    android:textSize="15sp"
+                    android:textColor="#3e3e3e"
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="2sp"
+                    android:button="@drawable/radio_button_selector"
+                    android:text="@string/wash_indoor" />
 
-                    <!-- TODO : 라디오버튼 아이콘과 간격 8dp 설정 필요 -->
-                    <RadioButton
-                        android:id="@+id/radioButton"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:textSize="15sp"
-                        android:textColor="#3e3e3e"
-                        android:letterSpacing="0.05"
-                        android:lineSpacingExtra="2sp"
-                        android:button="@drawable/radio_button_selector"
-                        android:text="@string/wash_indoor" />
+                <RadioButton
+                    android:id="@+id/radioButton2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="36dp"
+                    android:textSize="15sp"
+                    android:textColor="#3e3e3e"
+                    android:letterSpacing="0.05"
+                    android:lineSpacingExtra="2sp"
+                    android:button="@drawable/radio_button_selector"
+                    android:text="@string/wash_outdoor" />
+            </RadioGroup>
 
-                    <RadioButton
-                        android:id="@+id/radioButton2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="36dp"
-                        android:textSize="15sp"
-                        android:textColor="#3e3e3e"
-                        android:letterSpacing="0.05"
-                        android:lineSpacingExtra="2sp"
-                        android:button="@drawable/radio_button_selector"
-                        android:text="@string/wash_outdoor" />
-                </RadioGroup>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-            <View
+        <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#1a323232"
@@ -317,6 +318,17 @@
             tools:text="부가 서비스 (옵션)"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- 부가서비스  리스트 -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/optionList"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="14dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/option_service_title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
